Add tag detail endpoint
